fix: add testim-logo

--- a/templates/home.html
+++ b/templates/home.html
@@ -622,7 +622,7 @@
                 <p>
 Сотрудничество с этой компанией стало для нас настоящим открытием! Их профессионализм и внимание к деталям впечатляют.                </p>
                 <div class="testimonial-widget-2__user-block" bis_skin_checked="1">
-                  <img src="{% static '/image/h03-feature-2.svg' %}" alt="image alt">
+                  <img src="{% static '/image/icons/h03-feature-2.svg' %}" alt="image alt">
                   <div class="author-info" bis_skin_checked="1">
                     <h4 class="testimonial-widget-2__user-name">Анна Смирнова</h4>
                     <span class="testimonial-widget-2__user-position">Менеджер, Компания Б</span>
