--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -3352,7 +3352,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   margin: 0;
   text-align: center;
-  color: #333;
+  color: #0d6efd;
   font-weight: 500;
   opacity: 0;
   transform: translateY(10px);
