fix: correcrt animation

--- a/templates/home.html
+++ b/templates/home.html
@@ -528,58 +528,64 @@
     </div>
     <div class="row row--portfolio-gutter">
       <div
-          class="col-md-6 col-xs-10 portfolio-hover-block"
-          data-aos-duration="1000"
-          data-aos="fade-up"
-          data-aos-delay="300"
-        >
-          <a href="portfolio-details.html" class="portfolio-widget">
-            <div class="portfolio-widget_image-block">
-              <img
-                src="{% static '/image/home-1/portf1.png' %}"
-                alt="portfolio image"
-                class="portfolio-image"
-              />
-              <div class="portfolio-overlay">
-                <ul class="portfolio-thesis-list">
-                  <li>Снижение отходов на 40%</li>
-                  <li>Интеграция ИИ-сортировки</li>
-                  <li>Экономия ресурсов</li>
-                </ul>
-              </div>
-            </div>
-            <div class="portfolio-widget__title-block">
-              <h3 class="portfolio-widget__title">«РесайклПро»</h3>
-              <span class="portfolio-widget__category">Комплексное внедрение</span>
-            </div>
-            <div class="portfolio-widget__link">
-              <span class="btn-link btn-arrow">Подробнее</span>
-            </div>
-          </a>
-      </div>
-      <div
         class="col-md-6 col-xs-10"
         data-aos-duration="1000"
-        data-aos="fade-down"
+        data-aos="fade-up"
         data-aos-delay="300"
       >
         <a href="portfolio-details.html" class="portfolio-widget">
-          <div class="portfolio-widget_image-block">
+          <div class="portfolio-widget_image-block hover-fill--up">
+            <img
+              src="{% static '/image/home-1/portf1.png' %}"
+              alt="portfolio image"
+              class="portfolio-image"
+            />
+            <div class="hover-fill--up__text">
+              <ul class="portfolio-thesis-list">
+                <li>Снижение отходов на 40%</li>
+                <li>Интеграция ИИ-сортировки</li>
+                <li>Экономия ресурсов</li>
+              </ul>
+            </div>
+          </div>
+          <div class="portfolio-widget__title-block">
+            <h3 class="portfolio-widget__title">«РесайклПро»</h3>
+            <span class="portfolio-widget__category">Комплексное внедрение</span>
+          </div>
+          <div class="portfolio-widget__link">
+            <span class="btn-link btn-arrow">Подробнее</span>
+          </div>
+        </a>
+      </div>
+
+
+      <div
+        class="col-md-6 col-xs-10"
+        data-aos-duration="1000"
+        data-aos="fade-up"
+        data-aos-delay="300"
+      >
+        <a href="portfolio-details.html" class="portfolio-widget">
+          <div class="portfolio-widget_image-block hover-fill--up">
             <img
               src="{% static '/image/home-1/portf2.png' %}"
               alt="portfolio image"
+              class="portfolio-image"
             />
+            <div class="hover-fill--up__text">
+              <ul class="portfolio-thesis-list">
+                <li>Снижение отходов на 40%</li>
+                <li>Интеграция ИИ-сортировки</li>
+                <li>Экономия ресурсов</li>
+              </ul>
+            </div>
           </div>
           <div class="portfolio-widget__title-block">
-            <h3 class="portfolio-widget__title">
-              «МагКомпозит»
-            </h3>
-            <span class="portfolio-widget__category"
-              >Комплексное внедрение</span
-            >
+            <h3 class="portfolio-widget__title">«МагКомпозит»</h3>
+            <span class="portfolio-widget__category">Комплексное внедрение</span>
           </div>
           <div class="portfolio-widget__link">
-            <span class="btn-link btn-arrow">Подробнее </span>
+            <span class="btn-link btn-arrow">Подробнее</span>
           </div>
         </a>
       </div>
