fix: fix keys-animation fin

--- a/templates/home.html
+++ b/templates/home.html
@@ -542,9 +542,9 @@
             />
             <div class="hover-fill--up__text">
               <ul class="portfolio-thesis-list">
-                <li>Снижение отходов на 40%</li>
-                <li>Интеграция ИИ-сортировки</li>
-                <li>Экономия ресурсов</li>
+                <li><h3>Снижение отходов на 40%</h3></li>
+                <li><h3>Интеграция ИИ-сортировки</h3></li>
+                <li><h3>Экономия ресурсов</h3></li>
               </ul>
             </div>
           </div>
@@ -574,9 +574,9 @@
             />
             <div class="hover-fill--up__text">
               <ul class="portfolio-thesis-list">
-                <li>Снижение отходов на 40%</li>
-                <li>Интеграция ИИ-сортировки</li>
-                <li>Экономия ресурсов</li>
+                <li><h3>Снижение отходов на 40%</h3></li>
+                <li><h3>Интеграция ИИ-сортировки</h3></li>
+                <li><h3>Экономия ресурсов</h3></li>
               </ul>
             </div>
           </div>
