--- a/bitrixsite/static/css/style.css
+++ b/bitrixsite/static/css/style.css
@@ -3346,7 +3346,13 @@ h6 {
   z-index: 0;
 }
 
-/* Радиальная волна (как ::before у кнопки) */
+.hover-fill--up {
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+
+/* Шарик-всплеск */
 .hover-fill--up::before {
   content: '';
   position: absolute;
@@ -3359,10 +3365,34 @@ h6 {
   background: #f5ebdc;
   z-index: 1;
   transform: translate3d(0, 68%, 0) scale3d(0, 0, 0);
-  transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
+  animation: none;
+  pointer-events: none;
+  opacity: 0.9;
+  visibility: visible;
 }
 
-/* Второй слой — заполнитель (как ::after у кнопки) */
+/* Один раз при наведении */
+.hover-fill--up:hover::before {
+  animation: splash-out 0.5s cubic-bezier(0.1, 0, 0.3, 1) forwards;
+}
+
+@keyframes splash-out {
+  0% {
+    transform: translate3d(0, 68%, 0) scale3d(0, 0, 0);
+    opacity: 1;
+  }
+  80% {
+    transform: translate3d(0, 0, 0) scale3d(1.1, 1.1, 1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate3d(0, 0, 0) scale3d(1.1, 1.1, 1);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+
 .hover-fill--up::after {
   content: '';
   position: absolute;
@@ -3373,21 +3403,15 @@ h6 {
   background: #f5ebdc;
   z-index: 1;
   transform: translate3d(0, -100%, 0);
-  transition:
-    transform 0.4s cubic-bezier(0.1, 0, 0.3, 1),
-    -webkit-transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
-}
-
-/* Hover анимации */
-.hover-fill--up:hover::before {
-  transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  transition: transform 0.4s cubic-bezier(0.1, 0, 0.3, 1);
+  opacity: 0.9;
 }
 
 .hover-fill--up:hover::after {
-  transition-delay: 0.4s;
+  transform: translate3d(0, 0, 0);
+    transition-delay: 0.4s;
   transition-timing-function: linear;
   transition-duration: 0.05s;
-  transform: translate3d(0, 0, 0);
 }
 
 /* Контейнер с тезисами */
@@ -3416,6 +3440,10 @@ h6 {
   animation: none;
 }
 
+.portfolio-thesis-list h3 {
+  color: #0d6efd;
+}
+
 /* Анимации текста как у кнопки */
 @keyframes fill-up-initial {
   100% {
@@ -3430,7 +3458,7 @@ h6 {
     transform: translate3d(0, 100%, 0) scale3d(1, 2, 1);
   }
   100% {
-    opacity: 1;
+    opacity: 0.85;
     transform: translate3d(0, 0, 0);
   }
 }
