--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
           <div class="col-lg-12 col-md-12" bis_skin_checked="1">
             <div class="home-8_hero-content-block" bis_skin_checked="1">
               <div class="home-8_hero-text-block" bis_skin_checked="1">
-                <h1 class="heading-xl heading-xl--public-sans hero-content__title">
+                <h1 class="heading-l hero-content__title">
                   Правильные интеграторы - эксперты в области внедрения Битрикс24</h1>
                 <p>
                   Мы создаем индивидуальные решения для каждого клиента, высокая эффективность и надежнность
