--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -6,7 +6,7 @@
   <img class="inner_banner-background-image" src= {% static '/image/common/inner-bg.png' %} alt="image alt">
   <div class="container">
     <div class="inner_banner-content-block">
-      <h3 class="inner_banner-title">Отзывы</h3>
+      <h3 class="inner_banner-title">Отзывы наших клиентов</h3>
       <ul class="banner__page-navigator">
         <li>
           <a href="/">Главная</a>
@@ -48,83 +48,182 @@
 </div>
 
 
-
-
-
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~
+    Home 1 : Brand Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <div class="brand-section">
   <div class="container">
-    <div class="brands-wrapper-inner">
-
-
-
+    <div class="home-6_brands-wrapper-inner">
       <div class="slidercontainer h-100">
         <div class="row align-items-center h-100">
           <div class="slidercontainer rounded">
             <div class="brand-heading">
-              <h3 class="brand-heading__title">Более 100 компаний выбрали Правильных интеграторов</h3>
+              <h3 class="brand-heading__title">
+                Более 100 компаний выбрали Правильных интеграторов
+              </h3>
             </div>
             <div class="slider">
-              <div class="logos  brands-wrapper ">
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/1.png'%} alt="brand-logo">
+              <div class="logos brands-wrapper">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/1.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/2.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/2.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/3.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/3.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/4.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/4.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/5.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/5.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/6.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/6.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/7.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/7.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/8.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/8.png'%}
+                  alt="brand-logo">
                 </div>
                 <!-- <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/9.png'%} alt="brand-logo">
-                </div> -->
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/10.png'%} alt="brand-logo">
+                      <img class="icon-brand" src={% static '/image/home/9.png'%} alt="brand-logo">
+                    </div> -->
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/10.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/11.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/11.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/12.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/12.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/13.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/13.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/14.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/14.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/15.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/15.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/16.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/16.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/17.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/17.png'%}
+                  alt="brand-logo">
                 </div>
-                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
-                  <img class="icon-brand" src={% static '/image/home/18.png'%} alt="brand-logo">
+                <div
+                  class="single-brand fab"
+                  data-aos-duration="1000"
+                  data-aos="fade-left"
+                  data-aos-delay="800"
+                >
+                  <img class="icon-brand" src={% static '/image/home/18.png'%}
+                  alt="brand-logo">
                 </div>
               </div>
-
             </div>
           </div>
         </div>
-      
       </div>
     </div>
   </div>
@@ -157,9 +256,11 @@
       </div>
       <div class="col-xxl-6 col-lg-7 col-md-10 col-auto aos-init aos-animate" data-aos-duration="1000" data-aos="fade-left">
         <div class="content">
-          <div class="content-text-block">
-            <h2 class="content-title heading-md text-black">{{ review.review_name }}</p>
-            <div class="content-divider"></div>
+          <div class="testimonial-widget-2__user-block gap-3" bis_skin_checked="1">
+            <img src="{% static '/image/icons/h03-feature-2.svg' %}" alt="image alt">
+            <div class="author-info" bis_skin_checked="1">
+              <h2 class="content-title heading-md text-black">{{ review.review_name }}</h2>
+            </div>
           </div>
           <div class="content-testimonial">
             <div class="content-testimonial__text">
@@ -183,27 +284,49 @@
   </div>
 {% endfor %}
 
+<div class="pagination" bis_skin_checked="1">
+  <!-- Pagination -->
+  <div class="pagination-wrapper" bis_skin_checked="1">
+    <button class="btn btn--arrow">
+      <i class="fa fa-angle-left"></i>
+    </button>
+    <button class="btn btn-main active">1</button>
+    <button class="btn btn-main">2</button>
+    <button class="btn btn-main">3</button>
+    <button class="btn btn--arrow">
+      <i class="fa fa-angle-right"></i>
+    </button>
+  </div>
 </div>
 
-
- <!--~~~~~~~~~~~~~~~~~~~~~~~~
+</div>
+<!--~~~~~~~~~~~~~~~~~~~~~~~~
      CTA Base 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <div class="cta-base">
   <div class="container">
     <div class="cta-base__wrapper border-bottom-dark">
-      <div class="row align-items-center justify-content-center justify-content-md-between gutter-y-20">
+      <div
+        class="row align-items-center justify-content-center justify-content-md-between gutter-y-20"
+      >
         <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-7 col-10">
           <div class="cta-base__text-block">
-            <h2 class="heading-md text-white">Хотите узнать больше про нас?</h2>
+            <h2 class="heading-md text-white">Хотите также</h2>
           </div>
         </div>
         <div class="col-xl-auto col-lg-4 col-md-5 col-xs-8 col-10">
           <div class="cta-base__button">
-            <a href="./contact.html" class="btn-masco rounded-pill btn-fill--up">
-              <span>Наш телеграм</span></a>
+            <a
+              href="./contact.html"
+              class="btn-masco rounded-pill btn-fill--up"
+            >
+              <span>Заполнить заявку</span></a
+            >
             <div class="cta-base__button-shape">
-              <img src="{% static '/image/home-1/cta-shape.svg' %}" alt="image alt">
+              <img
+                src="{% static '/image/home-1/cta-shape.svg' %}"
+                alt="image alt"
+              />
             </div>
           </div>
         </div>
