feat: add full our-company page

--- a/templates/company.html
+++ b/templates/company.html
@@ -310,45 +310,57 @@
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Home 1 : Testimonial Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<div
-  class="home-1_testimonial-section section-padding-120 bg-light-2"
-  id="testimonial"
->
+<div class="about_content-section bg-light-2 section-padding-120">
   <div class="container">
-    <div class="testimonial-widget-large">
-      <div class="row row--custom">
-        <div
-          class="col-xl-5 col-lg-5 col-auto aos-init aos-animate"
-          data-aos-duration="1000"
-          data-aos="fade-right"
-        >
-          <div class="testimonial-widget-large__image">
-            <img
-              src="{% static '/image/1R1A0289.jpg' %}"
-              alt="handsome-smiling-bearded-man-glasses-working-laptop"
-            />
+    <div class="row row--custom">
+      <div class="col-xxl-6 col-lg-5 col-md-6 col-7">
+        <div class="about_content-image-block">
+          <div class="about_content-image content-image--mobile-width">
+            <img src="{% static '/image/about/video-image.png' %}""
+            alt="alternative text">
           </div>
+          <a
+            href="https://www.youtube.com/watch?v=zo9dJFo8H8g"
+            data-fancybox=""
+            class="btn-play absolute-center btn-play"
+          >
+            <i class="fa-solid fa-play"></i>
+          </a>
         </div>
-        <div
-          class="col-xl-6 col-lg-6 col-md-9 col-auto aos-init aos-animate"
-          data-aos-duration="1000"
-          data-aos="fade-left"
-        >
-          <div class="testimonial-widget-large__body">
-            <div class="content_text-block" bis_skin_checked="1">
-            <h2 class="content-title text-black-2 heading-md">Мы в ТОП-5 интеграторов Битрикс24 в Беларуси</h2>
-          </div>
-            <p >
-              Мы — команда, где каждый специалист на своём месте и в то же время часть дружного, поддерживающего коллектива. У нас ценятся инициативность, стремление к росту и любовь к технологиям.
-              <br/><br/>
-              Мы развиваемся вместе: участвуем в обучениях, прокачиваем скиллы и делимся опытом. Здесь ценят идеи, уважают личность и радуются общим победам. У нас интересно, стабильно и просто по-человечески классно работать.
+      </div>
+      <div
+        class="col-xxl-6 col-lg-7 col-md-10 col-auto aos-init aos-animate"
+        data-aos-duration="1000"
+        data-aos="fade-left"
+      >
+        <div class="content">
+          <div class="content-text-block">
+            <h2 class="content-title heading-md text-black">
+              Мы в ТОП-5 интеграторов Битрикс24 в Беларуси
+            </h2>
+            <p>
+              Правильные интеграторы – это команда профессионалов, которые
+              помогут вам превратить Битрикс24 в мощный инструмент для развития
+              вашего бизнеса.
             </p>
-
-            <div class="testimonial-widget-2__user-block mt-10" bis_skin_checked="1">
-              <img src="/static/image/icons/h03-feature-2.svg" alt="image alt">
-              <div class="author-info" bis_skin_checked="1">
-                <h4 class="testimonial-widget-2__user-name">Роман Сытько</h4>
-                <span class="testimonial-widget-2__user-position">CEO Правильные Интеграторы</span>
+            <div class="content-divider"></div>
+          </div>
+          <div class="content-testimonial">
+            <div class="content-testimonial__text">
+              <p>
+                «Мы не просто внедряем Битрикс24, мы проводим глубокий
+                бизнес-анализ, вникаем в каждый процесс и создаем решения,
+                которые максимизируют эффективность вашего бизнеса»
+              </p>
+            </div>
+            <div class="content-testimonial__user-metadata">
+              <div class="content-testimonial__user">
+                <img src={% static '/image/about/user-image.png' %}
+                alt="alternative text">
+              </div>
+              <div class="content-testimonial__body">
+                <h4 class="content-testimonial__user-name">Роман Сытько</h4>
+                <span>руководитель компании «Правильные интеграторы»</span>
               </div>
             </div>
           </div>
@@ -357,7 +369,6 @@
     </div>
   </div>
 </div>
-
     
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~
  Career Page : main section
@@ -430,7 +441,7 @@
           </div>
         </div>
         <div class="section-button" bis_skin_checked="1">
-          <a href="#" class="btn-masco rounded-pill btn-fill--up"><span>Нет подходящей вакансии? Свяжитесь с нами - кнопка</span></a>
+          <a href="#" class="btn-masco rounded-pill btn-fill--up"><span>Нет подходящей вакансии? Свяжитесь с нами</span></a>
         </div>
       </div>
     </div>
