feat: add cases page

--- a/templates/about.html
+++ b/templates/about.html
@@ -95,7 +95,7 @@
       <div class="col-xxl-6 col-lg-5 col-md-6 col-7">
         <div class="about_content-image-block">
           <div class="about_content-image content-image--mobile-width">
-            <img src={% static '/image/about/video-image.png' %}
+            <img src="{% static '/image/about/video-image.png' %}""
             alt="alternative text">
           </div>
           <a
@@ -553,7 +553,7 @@
           <div class="content-text-block" bis_skin_checked="1">
             <h2 class="content-title text-black-2 heading-lg">Наша команда Правильных интеграторов</h2>
             <p>
-              Мы делаем большую ставку на нашу команду. Именно так мы становимся лучше, а внедрение Битрикс24 с нашей командой - успешнее. 
+              Мы делаем большую ставку на нашу команду. Именно так мы становимся лучше, а внедрение Битрикс24 с нашей командой - успешнее.
             </p>
             <ul class="content-list">
               <li class="content-list-item"><img src="{% static '/image/icons/icon-check-purple.svg' %}" alt="icon check purple">Ценим опыт каждого сотрудника</li>
@@ -561,7 +561,7 @@
             </ul>
           </div>
           <div class="content-button-block" bis_skin_checked="1">
-            <a href="" class="btn-masco btn-outline-l08 btn-fill--up rounded-pill"><span>Познакомиться с нами ближе </span></a>
+            <a href="" class="btn-masco btn-outline-l08 btn-fill--up rounded-pill"><span>Познакомиться с нами ближе</span></a>
           </div>
         </div>
       </div>
